Add some real news

--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
     <div class="container">
         <nav class="navigation">
             <ul class="navigation-list">
-                <li><a href="">Nav link</a></li>
-                <li><a class="active" href="">Nav link</a></li>
-                <li><a href="">Nav link</a></li>
-                <li><a href="">Nav link</a></li>
-                <li><a href="">Nav link</a></li>
-                <li><a href="">Nav link</a></li>
-                <li><a href="">Nav link</a></li>
+                <li><a href="">Главная</a></li>
+                <li><a class="active" href="">Новости</a></li>
+                <li><a href="">Недвижимость</a></li>
+                <li><a href="">Авто</a></li>
+                <li><a href="">Работа</a></li>
+                <li><a href="">Объявления</a></li>
+                <li><a href="">Знакомства</a></li>
+                <li><a href="">Погода</a></li>
+                <li><a href="">Афиша</a></li>
+                <li><a href="">Форумы</a></li>
+                <li><a href="">Бизнес</a></li>
+                <li><a href="">Общение</a></li>
             </ul>
         </nav>
         <div class="adv-links">
             <ul class="navigation-list">
-                <li><a href="">Adv link</a></li>
-                <li><a href="">Adv link</a></li>
-                <li><a href="">Adv link</a></li>
-                <li><a href="">Adv link</a></li>
-                <li><a href="">Adv link</a></li>
+                <li><a href="">Новогодний спецпроект</a></li>
+                <li><a href="">Уникальные дома Екатеринбурга</a></li>
+                <li><a href="">Споры о храме-на-воде</a></li>
+                <li><a href="">Где отметить Новый год</a></li>
+                <li><a href="">Безграмотный Екатеринбург</a></li>
+                <li><a href="">Улицы нашего городка</a></li>
             </ul>
         </div>
         <header class="main-header">
@@ -150,64 +156,72 @@
                         <a href="">Все новости</a>
                     </div>
                     <article>
-                        <img src="images/news.jpg" alt="tmp" title="tmp">
-                        <a href="">Awesome header</a>
-                        <p>Some awesome news here. Shock content. Please, be
-                        careful while reading this amazing article</p>
+                        <img src="http://www.e1.ru/news/static/632da73fb31ea8641c663004e06d20e7_70_50_c.jpg"
+                        alt="tmp" title="tmp">
+                        <a href="">Сочи лишили права на проведение ЧМ по бобслею
+                        и скелетону-2017</a>
+                        <p>Соревнования должны пройти в феврале.</p>
                     </article>
                     <article>
-                        <img src="images/news.jpg" alt="tmp" title="tmp">
-                        <a href="">Awesome header</a>
-                        <p>Some awesome news here. Shock content. Please, be
-                        careful while reading this amazing article</p>
+                        <img src="http://www.e1.ru/news/static/8eafad4e3fc627213b45bf5cbc3863e0_70_50_c.jpg"
+                        alt="tmp" title="tmp">
+                        <a href="">Шестиклассник из Тавды получил конструктор Lego
+                        от Владимира Путина</a>
+                        <p>Руслан сам попросил у президента подарок.</p>
                     </article>
                     <article>
-                        <img src="images/news.jpg" alt="tmp" title="tmp">
-                        <a href="">Awesome header</a>
-                        <p>Some awesome news here. Shock content. Please, be
-                        careful while reading this amazing article</p>
+                        <img src="http://www.e1.ru/news/static/7a8988b7411cb8b709f7ba3eefa9d5ac_70_50_c.jpg"
+                        alt="tmp" title="tmp">
+                        <a href="">Одному из екатеринбуржцев неожиданно достанется
+                        бесплатный квадрокоптер</a>
+                        <p>Жители новостроек принимают участие в розыгрыше, сами того не зная.</p>
                     </article>
                     <article>
-                        <img src="images/news.jpg" alt="tmp" title="tmp">
-                        <a href="">Awesome header</a>
-                        <p>Some awesome news here. Shock content. Please, be
-                        careful while reading this amazing article</p>
+                        <img src="http://www.e1.ru/news/static/ee446ca63f0cd9a31cc4faf52af5a2c1_70_50_c.jpg"
+                        alt="tmp" title="tmp">
+                        <a href="">Вам решать: голосуем за арт-объекты, которые
+                        появятся в Екатеринбурге к ЧМ-2018</a>
+                        <p>Жюри выберет два лучших макета 20 декабря, а вы
+                        можете сделать это уже сейчас.</p>
                     </article>
                     <article>
-                        <img src="images/news.jpg" alt="tmp" title="tmp">
-                        <a href="">Awesome header</a>
-                        <p>Some awesome news here. Shock content. Please, be
-                        careful while reading this amazing article</p>
+                        <img src="http://www.e1.ru/news/static/17a78bd34fe141ca8c3dacbb1ba1ca9e_70_50_c.jpg"
+                        alt="tmp" title="tmp">
+                        <a href="">В Екатеринбурге поймали водителей, которые
+                        игнорируют машины с "сигналками"</a>
+                        <p>Полиция и скорая помощь провели спецоперацию "Маяк".</p>
                     </article>
                     <article>
-                        <img src="images/news.jpg" alt="tmp" title="tmp">
-                        <a href="">Awesome header</a>
-                        <p>Some awesome news here. Shock content. Please, be
-                        careful while reading this amazing article</p>
+                        <img src="http://www.e1.ru/news/static/f964c5387d911c4a0cb39ff8baec5800_70_50_c.jpg"
+                        alt="tmp" title="tmp">
+                        <a href="">Уральские автодилеры проверили топливо сети "Газпромнефть"</a>
+                        <p>На одной из заправочных станций в Екатеринбурге прошёл День качества.</p>
                     </article>
                     <article>
-                        <img src="images/news.jpg" alt="tmp" title="tmp">
-                        <a href="">Awesome header</a>
-                        <p>Some awesome news here. Shock content. Please, be
-                        careful while reading this amazing article</p>
+                        <img src="http://www.e1.ru/news/static/e7d2925872e98760b6e397c16395fced_70_50_c.jpg"
+                        alt="tmp" title="tmp">
+                        <a href="">Увидеть первым: новый Audi A5 Coupe прибыл в Екатеринбург</a>
+                        <p>Предпремьерный показ новинки начался в "АЦ Космонавтов".</p>
                     </article>
                     <article>
-                        <img src="images/news.jpg" alt="tmp" title="tmp">
-                        <a href="">Awesome header</a>
-                        <p>Some awesome news here. Shock content. Please, be
-                        careful while reading this amazing article</p>
+                        <img src="http://www.e1.ru/news/static/edb8a745786622f3e72177082adb308e_70_50_c.jpg"
+                        alt="tmp" title="tmp">
+                        <a href="">ГИБДД подтвердила, что за рулём автомобиля был депутат Карапетян</a>
+                        <p>Сотрудники задержали члена Заксобрания в нетрезвом состоянии.</p>
                     </article>
                 </section>
             </div>
             <div class="center">
                 <section class="news">
                     <div class="section-header">
-                        <h2>Новости</h2>
-                        <a href="">Все новости</a>
+                        <h2>Подробности</h2>
+                        <a href="">Перейти</a>
                     </div>
                     <article>
-                        <img src="images/news.jpg" alt="tmp" title="tmp">
-                        <a href="">Awesome header</a>
+                        <img src="http://www.e1.ru/news/static/479aa672e92a4c2b0cc292f811310ee7_70_50_c.jpg"
+                        alt="tmp" title="tmp">
+                        <a href="">Причиной смерти 6-летней девочки в садике на
+                        Вторчермете стали проблемы с сердцем</a>
                         <p>Some awesome news here. Shock content. Please, be
                         careful while reading this amazing article</p>
                     </article>
