--- a/index.html
+++ b/index.html
@@ -145,8 +145,10 @@
                     <a href="">
                         <img src="images/main-image.jpg" alt="tmp">
                         <div class="category-header">
-                            <p class="main-news-header">Some text here</p>
-                            <p class="main-news-content">Some description here</p>
+                            <p class="main-news-header">
+                                В ДТП на пересечении Московской и Радищева погибло 5 человек
+                            </p>
+                            <p class="main-news-content">Детали произошедшего выясняются</p>
                         </div>
                     </a>
                 </div>
@@ -212,82 +214,264 @@
                 </section>
             </div>
             <div class="center">
-                <section class="news">
+                <section class="other-news">
                     <div class="section-header">
                         <h2>Подробности</h2>
                         <a href="">Перейти</a>
                     </div>
-                    <article>
+                    <article class="additional">
                         <img src="http://www.e1.ru/news/static/479aa672e92a4c2b0cc292f811310ee7_70_50_c.jpg"
-                        alt="tmp" title="tmp">
-                        <a href="">Причиной смерти 6-летней девочки в садике на
-                        Вторчермете стали проблемы с сердцем</a>
-                        <p>Some awesome news here. Shock content. Please, be
-                        careful while reading this amazing article</p>
+                            alt="tmp" title="tmp">
+                        <div class="description">
+                            <div class="description-title">
+                                Причиной смерти 6-летней девочки в садике на
+                                Вторчермете стали проблемы с сердцем
+                            </div>
+                            <a href="">
+                                По факту проводится следственная проверка
+                            </a>
+                        </div>
                     </article>
                 </section>
-                <section class="news">
+                <section class="other-news">
                     <div class="section-header">
-                        <h2>Новости</h2>
-                        <a href="">Все новости</a>
+                        <h2>Репортаж</h2>
+                        <a href="">Перейти</a>
                     </div>
-                    <article>
-                        <img src="images/news.jpg" alt="tmp" title="tmp">
-                        <a href="">Awesome header</a>
-                        <p>Some awesome news here. Shock content. Please, be
-                        careful while reading this amazing article</p>
+                    <article class="additional">
+                        <img src="http://www.e1.ru/news/static/617020258493b5a824142906f4e1b3ba_70_50_c.jpg"
+                            alt="tmp" title="tmp">
+                        <div class="description">
+                            <div class="description-title">
+                                В салоне "Рим" покупатели лежат на диванах, подглядывают идеи дизайнеров и
+                                покупают мебель со скидками
+                            </div>
+                            <a href="">
+                                Обновлённый салон "АСМ-мебели" понравится тем, кто обставляет свой
+                                дом с любовью и вдумчиво.
+                            </a>
+                        </div>
                     </article>
                 </section>
-                <section class="news">
+                <section class="other-news">
                     <div class="section-header">
-                        <h2>Новости</h2>
-                        <a href="">Все новости</a>
+                        <h2>Статьи о недвижимости</h2>
+                        <a href="">Перейти</a>
                     </div>
-                    <article>
-                        <img src="images/news.jpg" alt="tmp" title="tmp">
-                        <a href="">Awesome header</a>
-                        <p>Some awesome news here. Shock content. Please, be
-                        careful while reading this amazing article</p>
+                    <article class="additional">
+                        <img src="http://www.e1.ru/news/static/4ccaf52aa32c87022d5d18a391393dc8_70_50_c.jpg"
+                            alt="tmp" title="tmp">
+                        <div class="description">
+                            <div class="description-title">
+                                Конкурсы, флешмоб и специальные цены на жильё: Академический подготовил
+                                интерактивный календарь событий
+                            </div>
+                            <a href="">
+                                В нём собраны советы на 18 дней до Нового года.
+                            </a>
+                        </div>
                     </article>
                 </section>
                 <div class="two-column">
-                    <section class="news">
+                    <section class="announcements">
                         <div class="section-header">
-                            <h2>Новости</h2>
-                            <a href="">Все новости</a>
+                            <h2>Недвижимость</h2>
+                            <a href="">Дать объявление</a>
                         </div>
-                        <article>
-                            <img src="images/news.jpg" alt="tmp" title="tmp">
-                            <a href="">Awesome header</a>
-                            <p>Some awesome news here. Shock content. Please, be
-                            careful while reading this amazing article</p>
+                        <div class="nav-links">
+                            <a href="">Аренда</a>
+                            <a href="">Продажа квартир</a>
+                            <a href="">Новостройки</a>
+                        </div>
+                        <article class="announcement">
+                            <img src="images/1.jpg"
+                                alt="tmp" title="tmp">
+                            <div class="announcement-description">
+                                <a href="">Продам 3-комнатную квартиру</a>
+                                <address>Радищева, 12</address>
+                                <div class="price">Цена: <span class="bold">16 562 000 руб.</span></div>
+                            </div>
+                        </article>
+                        <article class="announcement">
+                            <img src="images/2.jpg"
+                                alt="tmp" title="tmp">
+                            <div class="announcement-description">
+                                <a href="">Продам офисное помещение</a>
+                                <address>Кузнецова, 2Б</address>
+                                <div class="price">
+                                    Цена: <span class="bold">75 000 руб. за м<sup>2</sup></span>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="announcement">
+                            <img src="images/3.jpg"
+                                alt="tmp" title="tmp">
+                            <div class="announcement-description">
+                                <a href="">Продам дом</a>
+                                <address>Березовая, 2</address>
+                                <div class="price">Цена: <span class="bold">9 850 000 руб.</span></div>
+                            </div>
+                        </article>
+                        <article class="announcement">
+                            <img src="images/4.jpg"
+                                alt="tmp" title="tmp">
+                            <div class="announcement-description">
+                                <a href="">Продам земельный участок</a>
+                                <address>Белоярский</address>
+                                <div class="price">Цена: <span class="bold">270 000 руб.</span></div>
+                            </div>
                         </article>
                     </section>
-                    <section class="news">
+                    <section class="announcements">
                         <div class="section-header">
-                            <h2>Новости</h2>
-                            <a href="">Все новости</a>
+                            <h2>Продажа авто, мото</h2>
+                            <a href="">Перейти</a>
                         </div>
-                        <article>
-                            <img src="images/news.jpg" alt="tmp" title="tmp">
-                            <a href="">Awesome header</a>
-                            <p>Some awesome news here. Shock content. Please, be
-                            careful while reading this amazing article</p>
+                        <div class="nav-links">
+                            <a href="">Легковые</a>
+                            <a href="">Грузовые</a>
+                            <a href="">Мото</a>
+                        </div>
+                        <article class="announcement">
+                            <img src="https://auto.e1.ru/static/img/Public/pics/1rub-main-s.jpg"
+                                alt="tmp" title="tmp">
+                            <div class="announcement-description">
+                                <div class="bold">Найди автомобиль</div>
+                                <div class="bold special description">за 1 рубль от Е1</div>
+                            </div>
                         </article>
+                        <article class="announcement">
+                            <img src="images/5.JPG"
+                                alt="tmp" title="tmp">
+                            <div class="announcement-description">
+                                <a class="title">Kia Cerato</a>
+                                <div class="price bold">679 000 руб.</div>
+                                <div class="description">2014, механика, 1.6л</div>
+                            </div>
+                        </article>
+                        <article class="announcement">
+                            <img src="images/6.jpg"
+                                alt="tmp" title="tmp">
+                            <div class="announcement-description">
+                                <a class="title">Land Rover Range Rover</a>
+                                <div class="price bold">16 562 000 руб.</div>
+                                <div class="description">2009, автомат, 5л</div>
+                            </div>
+                        </article>
+                        <article class="announcement">
+                            <img src="images/7.jpg"
+                                alt="tmp" title="tmp">
+                            <div class="announcement-description">
+                                <a class="title">Kia Cee'd</a>
+                                <div class="price bold">519 000 руб.</div>
+                                <div class="description">2013, механика, 1.4л</div>
+                            </div>
+                        </article>
+                        <a href="">Каталог спецпредложений</a>
                     </section>
                 </div>
             </div>
             <div class="right">
-                <section class="news">
+                <section>
                     <div class="section-header">
-                        <h2>Новости</h2>
-                        <a href="">Все новости</a>
+                        <h2>Спецпроект</h2>
+                        <a href="">Перейти</a>
                     </div>
                     <article>
-                        <img src="images/news.jpg" alt="tmp" title="tmp">
-                        <a href="">Awesome header</a>
-                        <p>Some awesome news here. Shock content. Please, be
-                        careful while reading this amazing article</p>
+                        <img src="http://www.e1.ru/longread/tele7/images/promo.jpg" alt="tmp" title="tmp">
+                        <a class="special bold" href="">Найди украшение по душе</a>
+                    </article>
+                </section>
+                <section>
+                    <div class="section-header">
+                        <h2>Сейчас по TV</h2>
+                        <a href="">Перейти</a>
+                    </div>
+                    <article>
+                        <table class="schedule">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <img src="http://www.e1.ru/afisha/tv/img/icons/101_30.jpg"
+                                        alt="Первый канал" title="Первый канал">
+                                    </td>
+                                    <td>
+                                        <div>
+                                            10:55 — <span class="bold">Модный приговор</span>
+                                            <sup>(еще 45 мин.)</sup>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <img src="http://www.e1.ru/afisha/tv/img/icons/102_30.jpg"
+                                        alt="Россия" title="Россия">
+                                    </td>
+                                    <td>
+                                        <div>
+                                            11:00 — <span class="bold">Вести</span> <sup>(еще 25 мин.)</sup>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <img src="http://www.e1.ru/afisha/tv/img/icons/103_30.jpg"
+                                        alt="НТВ" title="НТВ">
+                                    </td>
+                                    <td>
+                                        <div>
+                                            10:20 —
+                                            <span class="bold">Остросюжетный сериал "ЛЕСНИК" (16+).</span>
+                                            <sup>(еще 45 мин.)</sup>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </article>
+                </section>
+                <section>
+                    <div class="section-header">
+                        <h2>Бизнес образование</h2>
+                        <a href="">Перейти</a>
+                    </div>
+                    <article>
+                        <p>
+                            <a class="special bold" href="">Семинары, тренинги, учебные курсы</a>
+                            - вся информация по бизнес-образованию для деловых людей и не только:
+                        </p>
+                        <form name="form1" method="get" action="/business/edu/">
+                            <div class="bold">Выбрать по тематике:</div>
+                            <select name="section_id">
+                                <option value="">все</option>
+                                <option value="2">Аудит</option>
+                                <option value="6">Бухгалтерский учет, налоги</option>
+                                <option value="7">ВЭД, Таможня</option>
+                                <option value="16">Логистика</option>
+                                <option value="17">Маркетинг, Реклама, PR</option>
+                                <option value="18">Менеджмент</option>
+                                <option value="35">Психология</option>
+                                <option value="29">Управление Персоналом</option>
+                                <option value="30">Финансы</option>
+                            </select>
+                            <div class="bold">Выбрать по организатору:</div>
+                            <select name="company_id">
+                                <option value="">все</option>
+                                <option value="269">ИППК УрФУ</option>
+                                <option value="205">Учебный центр Ирины Маминой</option>
+                            </select>
+                            <input type="submit" class="button_orange" value="Выбрать события">
+                        </form>
+                    </article>
+                </section>
+                <section>
+                    <div class="section-header">
+                        <h2>Совместные покупки</h2>
+                        <a href="">Перейти</a>
+                    </div>
+                    <article class="purchases">
+                        <img src="http://www.e1.ru/sp/images/basket.jpg" alt="tmp" title="tmp">
+                        <a class="special bold" href="">Вместе покупать дешевле!</a>
                     </article>
                 </section>
             </div>
